feat: add realtime food search with debounce